--- a/public/index.html
+++ b/public/index.html
@@ -804,7 +804,7 @@ function deleteItem(id) {
           </div>
           <div id="production-summary-card" class="card-gradient rounded-xl shadow-lg p-4 mb-4 border border-slate-200">
             <h3 class="font-bold mb-3 text-slate-700">📊 Monthly Overview</h3>
-            <div id="production-monthly-overview" class="grid grid-cols-2 md:grid-cols-4 gap-4">
+            <div id="production-monthly-overview" class="grid grid-cols-2 md:grid-cols-4 gap-4 flex-wrap">
               <!-- Auto-populated by renderProduction() -->
             </div>
           </div>
@@ -3512,22 +3512,22 @@ function deleteItem(id) {
 
       // Monthly Overview Cards
       const overviewHTML = `
-        <div class="bg-blue-50 border border-blue-200 rounded-lg p-3">
+        <div class="bg-blue-50 border border-blue-200 rounded-lg p-3 min-w-[140px] break-words">
           <div class="text-sm text-blue-600 mb-1">Total Production</div>
           <div class="text-2xl font-bold text-blue-700">${totalUnits.toLocaleString()}</div>
           <div class="text-xs text-blue-600">${Object.keys(byProduct).length} product${Object.keys(byProduct).length !== 1 ? 's' : ''}</div>
         </div>
-        <div class="bg-green-50 border border-green-200 rounded-lg p-3">
+        <div class="bg-green-50 border border-green-200 rounded-lg p-3 min-w-[140px] break-words">
           <div class="text-sm text-green-600 mb-1">Active Workers</div>
           <div class="text-2xl font-bold text-green-700">${uniqueWorkers.size}</div>
           <div class="text-xs text-green-600">${totalHours.toFixed(1)} total hours</div>
         </div>
-        <div class="bg-orange-50 border border-orange-200 rounded-lg p-3">
+        <div class="bg-orange-50 border border-orange-200 rounded-lg p-3 min-w-[140px] break-words">
           <div class="text-sm text-orange-600 mb-1">Total Cost</div>
           <div class="text-2xl font-bold text-orange-700">${currency}${totalCost.toLocaleString()}</div>
           <div class="text-xs text-orange-600">${currency}${costPerUnit.toFixed(2)}/unit</div>
         </div>
-        <div class="bg-purple-50 border border-purple-200 rounded-lg p-3">
+        <div class="bg-purple-50 border border-purple-200 rounded-lg p-3 min-w-[140px] break-words">
           <div class="text-sm text-purple-600 mb-1">Avg Productivity</div>
           <div class="text-2xl font-bold text-purple-700">${avgProductivity.toFixed(1)}</div>
           <div class="text-xs text-purple-600">units/hour</div>
