--- a/public/index.html
+++ b/public/index.html
@@ -430,21 +430,29 @@ function deleteItem(id) {
           if (tabWorkers) tabWorkers.classList.add('tab-active');
         }
 
-        // User menu toggle logic
-        const userMenuBtn = document.getElementById('user-menu-btn');
-        const userMenu = document.getElementById('user-menu');
-        if (userMenuBtn && userMenu) {
-          userMenuBtn.addEventListener('click', function(e) {
-            e.stopPropagation();
-            userMenu.classList.toggle('hidden');
-          });
-          // Hide menu when clicking outside
-          document.addEventListener('click', function(e) {
-            if (!userMenu.contains(e.target) && e.target !== userMenuBtn) {
-              userMenu.classList.add('hidden');
-            }
-          });
-        }
+        // User menu toggle logic (single instance, after DOM ready)
+        document.addEventListener('DOMContentLoaded', function() {
+          const userMenuBtn = document.getElementById('user-menu-btn');
+          const userMenu = document.getElementById('user-menu');
+          if (userMenuBtn && userMenu) {
+            userMenuBtn.addEventListener('click', function(e) {
+              e.stopPropagation();
+              userMenu.classList.toggle('hidden');
+            });
+            // Hide menu when clicking outside or on menu option
+            document.addEventListener('click', function(e) {
+              if (!userMenu.contains(e.target) && e.target !== userMenuBtn) {
+                userMenu.classList.add('hidden');
+              }
+            });
+            // Hide menu when clicking a menu option
+            userMenu.querySelectorAll('button').forEach(btn => {
+              btn.addEventListener('click', function() {
+                userMenu.classList.add('hidden');
+              });
+            });
+          }
+        });
       });
     </script>
     <header class="bg-white shadow-sm border-b border-slate-200 px-4 py-3 flex-shrink-0">
@@ -457,9 +465,108 @@ function deleteItem(id) {
               <svg class="w-4 h-4 ml-1" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"/></svg>
             </button>
             <span id="user-role-badge" class="text-xs px-2 py-1 rounded-full bg-purple-600 text-white font-semibold">ADMIN</span>
-            <div id="user-menu" class="absolute right-0 top-12 bg-white border border-slate-200 rounded shadow-lg z-50 hidden min-w-[160px]">
+            <div id="user-menu" class="absolute right-0 top-12 bg-white border border-slate-200 rounded shadow-lg z-[9999] hidden min-w-[160px]" style="overflow:visible;">
               <button id="change-password-btn" class="block w-full text-left px-4 py-2 hover:bg-slate-100 text-slate-700">Change Password</button>
+              <!-- Change Password Modal -->
+              <div id="change-password-modal" class="fixed inset-0 z-[10000] flex items-center justify-center bg-black bg-opacity-40 hidden">
+                <div class="bg-white rounded-lg shadow-lg p-6 w-full max-w-sm relative">
+                  <h2 class="text-lg font-bold mb-4">Change Password</h2>
+                  <form id="change-password-form" class="flex flex-col gap-3">
+                    <div>
+                      <label class="block text-sm font-medium mb-1" for="current-password">Current Password <span class="text-xs text-slate-400">(optional)</span></label>
+                      <input type="password" id="current-password" class="input-field w-full px-3 py-2 border border-slate-300 rounded-lg" autocomplete="current-password">
+                    </div>
+                    <div>
+                      <label class="block text-sm font-medium mb-1" for="new-password">New Password <span class="text-red-500">*</span></label>
+                      <input type="password" id="new-password" class="input-field w-full px-3 py-2 border border-slate-300 rounded-lg" required autocomplete="new-password">
+                    </div>
+                    <div>
+                      <label class="block text-sm font-medium mb-1" for="confirm-password">Confirm New Password <span class="text-red-500">*</span></label>
+                      <input type="password" id="confirm-password" class="input-field w-full px-3 py-2 border border-slate-300 rounded-lg" required autocomplete="new-password">
+                    </div>
+                    <div class="flex gap-2 mt-2">
+                      <button type="submit" class="bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 rounded-lg font-medium">Change</button>
+                      <button type="button" id="cancel-change-password" class="bg-slate-200 hover:bg-slate-300 text-slate-700 px-4 py-2 rounded-lg font-medium">Cancel</button>
+                    </div>
+                  </form>
+                  <button id="close-change-password-modal" class="absolute top-2 right-2 text-slate-400 hover:text-slate-700 text-xl">&times;</button>
+                </div>
+              </div>
               <button id="logout-btn" class="block w-full text-left px-4 py-2 hover:bg-slate-100 text-red-600">Logout</button>
+                <script>
+                  // Logout logic
+                  document.addEventListener('DOMContentLoaded', function() {
+                    const logoutBtn = document.getElementById('logout-btn');
+                    if (logoutBtn) {
+                      logoutBtn.addEventListener('click', function() {
+                        localStorage.removeItem('token');
+                        localStorage.removeItem('user');
+                        window.location.replace('/login.html');
+                      });
+                    }
+                    // Change password modal logic
+                    const changePasswordBtn = document.getElementById('change-password-btn');
+                    const changePasswordModal = document.getElementById('change-password-modal');
+                    const closeChangePasswordModal = document.getElementById('close-change-password-modal');
+                    const cancelChangePassword = document.getElementById('cancel-change-password');
+                    const changePasswordForm = document.getElementById('change-password-form');
+                    if (changePasswordBtn && changePasswordModal) {
+                      changePasswordBtn.addEventListener('click', function() {
+                        changePasswordModal.classList.remove('hidden');
+                      });
+                    }
+                    if (closeChangePasswordModal) {
+                      closeChangePasswordModal.addEventListener('click', function() {
+                        changePasswordModal.classList.add('hidden');
+                      });
+                    }
+                    if (cancelChangePassword) {
+                      cancelChangePassword.addEventListener('click', function() {
+                        changePasswordModal.classList.add('hidden');
+                      });
+                    }
+                    if (changePasswordForm) {
+                      changePasswordForm.addEventListener('submit', async function(e) {
+                        e.preventDefault();
+                        const currentPassword = document.getElementById('current-password').value;
+                        const newPassword = document.getElementById('new-password').value;
+                        const confirmPassword = document.getElementById('confirm-password').value;
+                        if (!newPassword || !confirmPassword) {
+                          alert('Please enter and confirm your new password.');
+                          return;
+                        }
+                        if (newPassword !== confirmPassword) {
+                          alert('New passwords do not match.');
+                          return;
+                        }
+                        // Call backend API to change password (assume /api/change-password)
+                        try {
+                          const token = localStorage.getItem('token');
+                          const res = await fetch('/api/auth/change-password', {
+                            method: 'POST',
+                            headers: {
+                              'Content-Type': 'application/json',
+                              'Authorization': token ? `Bearer ${token}` : ''
+                            },
+                            body: JSON.stringify({ currentPassword, newPassword })
+                          });
+                          const data = await res.json();
+                          if (res.ok) {
+                            alert('Password changed successfully! Please log in again.');
+                            localStorage.removeItem('token');
+                            localStorage.removeItem('user');
+                            window.location.replace('/login.html');
+                          } else {
+                            alert(data.message || 'Failed to change password.');
+                          }
+                        } catch (err) {
+                          alert('Failed to change password.');
+                        }
+                        changePasswordModal.classList.add('hidden');
+                      });
+                    }
+                  });
+                </script>
             </div>
           </div>
           <div class="flex gap-2 flex-shrink-0 mt-2">
@@ -804,7 +911,7 @@ function deleteItem(id) {
           </div>
           <div id="production-summary-card" class="card-gradient rounded-xl shadow-lg p-4 mb-4 border border-slate-200">
             <h3 class="font-bold mb-3 text-slate-700">📊 Monthly Overview</h3>
-            <div id="production-monthly-overview" class="grid grid-cols-2 md:grid-cols-4 gap-4 flex-wrap">
+            <div id="production-monthly-overview" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-4 p-2 w-full">
               <!-- Auto-populated by renderProduction() -->
             </div>
           </div>
@@ -3512,22 +3619,22 @@ function deleteItem(id) {
 
       // Monthly Overview Cards
       const overviewHTML = `
-        <div class="bg-blue-50 border border-blue-200 rounded-lg p-3 min-w-[140px] break-words">
+        <div class="bg-blue-50 border border-blue-200 rounded-lg p-4 w-full h-full break-words">
           <div class="text-sm text-blue-600 mb-1">Total Production</div>
           <div class="text-2xl font-bold text-blue-700">${totalUnits.toLocaleString()}</div>
           <div class="text-xs text-blue-600">${Object.keys(byProduct).length} product${Object.keys(byProduct).length !== 1 ? 's' : ''}</div>
         </div>
-        <div class="bg-green-50 border border-green-200 rounded-lg p-3 min-w-[140px] break-words">
+        <div class="bg-green-50 border border-green-200 rounded-lg p-4 w-full h-full break-words">
           <div class="text-sm text-green-600 mb-1">Active Workers</div>
           <div class="text-2xl font-bold text-green-700">${uniqueWorkers.size}</div>
           <div class="text-xs text-green-600">${totalHours.toFixed(1)} total hours</div>
         </div>
-        <div class="bg-orange-50 border border-orange-200 rounded-lg p-3 min-w-[140px] break-words">
+        <div class="bg-orange-50 border border-orange-200 rounded-lg p-4 w-full h-full break-words">
           <div class="text-sm text-orange-600 mb-1">Total Cost</div>
           <div class="text-2xl font-bold text-orange-700">${currency}${totalCost.toLocaleString()}</div>
           <div class="text-xs text-orange-600">${currency}${costPerUnit.toFixed(2)}/unit</div>
         </div>
-        <div class="bg-purple-50 border border-purple-200 rounded-lg p-3 min-w-[140px] break-words">
+        <div class="bg-purple-50 border border-purple-200 rounded-lg p-4 w-full h-full break-words">
           <div class="text-sm text-purple-600 mb-1">Avg Productivity</div>
           <div class="text-2xl font-bold text-purple-700">${avgProductivity.toFixed(1)}</div>
           <div class="text-xs text-purple-600">units/hour</div>
@@ -8282,11 +8389,17 @@ function deleteItem(id) {
           e.stopPropagation();
           userMenu.classList.toggle('hidden');
         });
-        // Hide menu when clicking outside
+        // Hide menu when clicking outside or on menu option
         document.addEventListener('click', function(e) {
           if (!userMenu.contains(e.target) && e.target !== userMenuBtn) {
             userMenu.classList.add('hidden');
           }
+        });
+        // Hide menu when clicking a menu option
+        userMenu.querySelectorAll('button').forEach(btn => {
+          btn.addEventListener('click', function() {
+            userMenu.classList.add('hidden');
+          });
         });
       }
     });
